--- a/1 Basics/package.json
+++ b/1 Basics/package.json
@@ -18,5 +18,17 @@
   "bugs": {
     "url": "https://gitlab.com/Tejas-Nanaware/Learning-ReactJS/issues"
   },
-  "homepage": "https://gitlab.com/Tejas-Nanaware/Learning-ReactJS#README"
+  "homepage": "https://gitlab.com/Tejas-Nanaware/Learning-ReactJS#README",
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1"
+  }
 }
