--- a/2 React Router/package.json
+++ b/2 React Router/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build",
-    "build": "webpack -d && xcopy \"src/index.html\" \"dist/\" /F /Y && webpack-dev-server --content-base src/ --inline --hot --history-api-fallback",
+    "build": "webpack -d && xcopy \"src/index.html\" \"dist/\" /F /Y && webpack-dev-server --content-base src/ --inline --hot",
     "build:prod": "webpack -p && xcopy \"src/index.html\" \"dist/\" /F /Y"
   },
   "repository": {
@@ -24,9 +24,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-loadable": "^5.3.1",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router": "^4.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
